--- a/HW5.Rmd
+++ b/HW5.Rmd
@@ -33,32 +33,54 @@ $$
 ### (a)
 Using the formula shown in the lecture slides (here we also need to adjust for the baseline covariate $X_1$), we have
 $$
-\hat{Pr}(Y(1,1)=1) = \sum_{X_2^{obs}=0,1} \hat{Pr}(Y^{obs} \mid W_1 = 1, W_2 = 1, X_2^{obs}, X_1) \hat{Pr}(L^{obs} \mid W_1 = 1, X_1),
+\hat{Pr}(Y(1,1)=1) = \sum_{X_2^{obs}=0,1} \hat{Pr}(Y^{obs} \mid W_1 = 1, W_2 = 1, X_2^{obs}, X_1) \hat{Pr}(X_2^{obs} \mid W_1 = 1, X_1),
 $$
 and 
 $$
 \hat{Pr}(Y(0,0)=1) = \sum_{X_2^{obs}=0,1} \hat{Pr}(Y^{obs} \mid W_1 = 0, W_2 = 0, X_2^{obs}, X_1) \hat{Pr}(X_2^{obs} \mid W_1 = 0, X_1).
 $$
 
-<!-- We use R to calculate these two values, which are -->
-<!-- ```{r} -->
-<!-- # code is kinda convoluted, but got OCD with tidyverse... -->
-<!-- p1 = dat %>% filter(w1==1, w2==1) %>% -->
-<!--   group_by(x2) %>% -->
-<!--   summarize(prob_y1 = mean(y), count_x2 = n()) %>% -->
-<!--   mutate(prob_x2 = count_x2/sum(count_x2)) %>% -->
-<!--   summarize(p1 = sum(prob_y1 * prob_x2)) %>% -->
-<!--   pull() -->
+We first use R to calculate these two values separately for $X_1=0$ and $X_1=1$. 
+```{r}
+# code is kinda convoluted, but I got OCD with tidyverse...
 
-<!-- p2 = dat %>% filter(w1==0, w2==0) %>% -->
-<!--   group_by(x2) %>% -->
-<!--   summarize(prob_y1 = mean(y), count_x2 = n()) %>% -->
-<!--   mutate(prob_x2 = count_x2/sum(count_x2)) %>% -->
-<!--   summarize(p1 = sum(prob_y1 * prob_x2)) %>% -->
-<!--   pull() -->
+## separate data by X1
+dat0 = dat %>% filter(x1==0)
+dat1 = dat %>% filter(x1==1)
 
-<!-- cat('Pr(Y(1,1)=1) =',p1, ' Pr(Y(0,0)=1) =', p2, '\n') -->
-<!-- ``` -->
+p_x1 = mean(dat$x1)
+
+## function to calculate the two probs on a dataset
+get_p1_p0 <- function(d){
+  p1 = d %>% filter(w1==1, w2==1) %>%
+  group_by(x2) %>%
+  summarize(prob_y1 = mean(y), count_x2 = n()) %>%
+  mutate(prob_x2 = count_x2/sum(count_x2)) %>%
+  summarize(p1 = sum(prob_y1 * prob_x2)) %>%
+  pull()
+  
+  p0 = d %>% filter(w1==0, w2==0) %>%
+  group_by(x2) %>%
+  summarize(prob_y1 = mean(y), count_x2 = n()) %>%
+  mutate(prob_x2 = count_x2/sum(count_x2)) %>%
+  summarize(p1 = sum(prob_y1 * prob_x2)) %>%
+  pull()
+  
+  list(p1=p1, p0=p0)
+}
+
+# calculate p1 and p0 on X1=0 and X1=0 subset
+probs0 = get_p1_p0(dat0)
+probs1 = get_p1_p0(dat1)
+
+cat('For X1=0: Pr(Y(1,1)=1) =',probs0$p1, ' Pr(Y(0,0)=1) =', probs0$p0, '\n')
+cat('For X1=1: Pr(Y(1,1)=1) =',probs1$p1, ' Pr(Y(0,0)=1) =', probs1$p0, '\n')
+```
+
+And then we compute a weighted average of $\hat\tau_{(X_1=1)}$ and $\hat\tau_{(X_1=0)}$ to get an estimate for $\tau$.
+```{r}
+(tau = (1-p_x1) * (probs0$p1 - probs0$p0) + p_x1 * (probs1$p1 - probs1$p0))
+```
 
 
 <!-- And then our estimate is -->
@@ -71,49 +93,49 @@ $$
 <!-- ``` -->
 
 
-We do the following things:
+<!-- We do the following things: -->
 
-1. Fit a logistic regression model for $Y$ on the treatment sequence, the intermidiate outcome and baseline covariate: 
-(Note: I tried to add in some interaction terms but they don't seem to lead to a better fit, so I'll just keep it simple.)
-```{r}
-mod.Y = glm(y ~ . , data=dat, family = 'binomial')
-```
+<!-- 1. Fit a logistic regression model for $Y$ on the treatment sequence, the intermidiate outcome and baseline covariate:  -->
+<!-- (Note: I tried to add in some interaction terms but they don't seem to lead to a better fit, so I'll just keep it simple.) -->
+<!-- ```{r} -->
+<!-- mod.Y = glm(y ~ . , data=dat, family = 'binomial') -->
+<!-- ``` -->
 
-2. Fit a logistic regression model for $X_2$ on the treatment at time $1$ and the baseline covariate:
-```{r}
-mod.x2 = glm(x2 ~ w1 + x1, data = dat, family = 'binomial')
-```
+<!-- 2. Fit a logistic regression model for $X_2$ on the treatment at time $1$ and the baseline covariate: -->
+<!-- ```{r} -->
+<!-- mod.x2 = glm(x2 ~ w1 + x1, data = dat, family = 'binomial') -->
+<!-- ``` -->
 
-3. Simulate $S = 1000$ times from the fitted model to get Monte Carlo estimates of $Pr(Y(1,1)=1)$ and $Pr(Y(0,0)=1)$:
-```{r}
-# expit function
-expit <- function(x){ exp(x)/(1+exp(x)) }
+<!-- 3. Simulate $S = 1000$ times from the fitted model to get Monte Carlo estimates of $Pr(Y(1,1)=1)$ and $Pr(Y(0,0)=1)$: -->
+<!-- ```{r} -->
+<!-- # expit function -->
+<!-- expit <- function(x){ exp(x)/(1+exp(x)) } -->
 
-# simulate bernoulli from log odds
-sim_bern_logit <- function(x, N){ as.numeric(rbernoulli(N, expit(x))) }
+<!-- # simulate bernoulli from log odds -->
+<!-- sim_bern_logit <- function(x, N){ as.numeric(rbernoulli(N, expit(x))) } -->
 
-# do it (resample from original data to get the baseline covars)
-S = 1000
-N = nrow(dat)
-samp = dat %>% slice(sample(N, S, replace = TRUE))
+<!-- # do it (resample from original data to get the baseline covars) -->
+<!-- S = 1000 -->
+<!-- N = nrow(dat) -->
+<!-- samp = dat %>% slice(sample(N, S, replace = TRUE)) -->
 
-## A = (1,1)
-samp11 = samp %>% mutate(w1 = 1, w2 = 1)
-samp11$x2 = sim_bern_logit(predict(mod.x2, newdata = samp11), S)
-samp11$y = expit(predict(mod.Y, newdata = samp11))
-p11 = mean(samp11$y)
+<!-- ## A = (1,1) -->
+<!-- samp11 = samp %>% mutate(w1 = 1, w2 = 1) -->
+<!-- samp11$x2 = sim_bern_logit(predict(mod.x2, newdata = samp11), S) -->
+<!-- samp11$y = expit(predict(mod.Y, newdata = samp11)) -->
+<!-- p11 = mean(samp11$y) -->
 
-## A = (0,0)
-samp00 = samp %>% mutate(w1 = 0, w2 = 0)
-samp00$x2 = sim_bern_logit(predict(mod.x2, newdata = samp00), S)
-samp00$y = expit(predict(mod.Y, newdata = samp00))
-p00 = mean(samp00$y)
-```
+<!-- ## A = (0,0) -->
+<!-- samp00 = samp %>% mutate(w1 = 0, w2 = 0) -->
+<!-- samp00$x2 = sim_bern_logit(predict(mod.x2, newdata = samp00), S) -->
+<!-- samp00$y = expit(predict(mod.Y, newdata = samp00)) -->
+<!-- p00 = mean(samp00$y) -->
+<!-- ``` -->
 
-4. Calculate $\hat{\tau}$, which is
-```{r}
-p11 - p00
-```
+<!-- 4. Calculate $\hat{\tau}$, which is -->
+<!-- ```{r} -->
+<!-- p11 - p00 -->
+<!-- ``` -->
 
 
 ### (b)
@@ -141,6 +163,8 @@ up2 = glm(w2 ~ w1, data=dat, family = 'binomial')
 3. Estimate the propensity score for all units at each time point and check for overlap. 
 ```{r PS for two time points}
 library(broom)
+
+expit <- function(x){ exp(x)/(1+exp(x)) }
 
 # time point 1
 e1 = ps1$fitted.values
@@ -301,20 +325,21 @@ cat('Posterior mean:', mean(Bayes_tau), '\n95% CI:', quantile(Bayes_tau,c(.025, 
 In the context of this problem, the joint model of all variables can be factorized as 
 $$
 \begin{aligned}
-&p(X_1, W_1, X_2, W_2, Y)\\
-=& p(Y \mid X_1, W_1, X_2, W_2) p(W_2 \mid X_1, W_1, X_2) p(X_2 \mid X_1, W_1) p(W_1 \mid X_1) p(X_1).
+&p(X_1, W_1, X_2(0), X_2(1), W_2, Y(0,0), Y(0,1), Y(1,0), Y(1,0))\\
+=& p(Y(0,0), Y(0,1), Y(1,0), Y(1,0) \mid X_1, W_1, X_2(0), X_2(1), W_2)\\
+&\times p(W_2 \mid X_1, W_1, X_2(0), X_2(1)) p(X_2(0), X_2(1) \mid X_1, W_1) p(W_1 \mid X_1) p(X_1).
 \end{aligned}
 $$
 
 Then I need to specify 5 models in total: 
 
-1. model for $Y$ (outcome) given $X_1, W_1, X_2, W_2$
+1. model for $Y(0,0), Y(0,1), Y(1,0), Y(1,0)$ (final potential outcomes) given $X_1, W_1, X_2, W_2$
 2. model for $W_2$ (2nd treament assignment) given $X_1, W_1, X_2$
-3. model for $X_2$ (intermediate outcome) given $X_1, X_1$
+3. model for $X_2(0), X_2(1)$ (potential intermediate outcomes) given $X_1, X_1$
 4. model for $W_1$ (1st treament assignment) given $X_1$
 5. model for $X_1$ (the target population distribution)
 
-Here all of them can be (saturated) binary outcome models, and again I can adopt independent $unif(0,1)$ priors for all the cell probabilities. Estimation for $\tau$ can be done by drawing from the posterior distributions of the parameters. 
+Here all of them can be specified as (marginal) binary outcome models, and again I can adopt independent $unif(0,1)$ priors for all the cell probabilities. Estimation for $\tau$ can be done by drawing from the posterior distributions of the parameters. 
 
 
 ## PART 2
